# mnist-torch-vs-jax

./: .gitignore  README.md  pyproject.toml
result/: jax_benchmark.json  pytorch_benchmark.json
src/: dataset.py  train_jax.py  train_pt.py
