[project]
name = "mnist-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]",
    "flax>=0.7.5",
    "tensorflow",
    "tensorflow_datasets",
    "clu",
    "matplotlib",
    "torch",
    "torchvision",
]
